[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-download"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[project]
name = "adverse_media"
version = "0.1.0"
description = "NLP"
authors = [
    {name = "The Shiekh"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=1.26.4,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "kaggle (>=2.0.0,<3.0.0)",
    "vader-sentiment (>=3.2.1.1,<4.0.0.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "mlxtend (==0.23.1)",
    "requests (>=2.33.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "openai (>=2.31.0,<3.0.0)",
    "graphviz (>=0.21,<0.22)",
    "torch (==2.2.2)",
    "torchvision (==0.17.2)",
    "sentence-transformers (==2.7.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "huggingface-hub (>=0.30.0,<0.31.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=7.34.1,<8.0.0)",
    "ipython (>=9.13.0,<10.0.0)",
    "anthropic (>=0.103.1,<0.104.0)",
    "datasets (>=4.8.5,<5.0.0)",

    ]

[dependency-groups]
dev = [
    "matplotlib (>=3.10.8,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
